wip10923